--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    
+    <meta name="google-site-verification" content="ZVOTuNI32deG-RalEkMAiElvDBwexOwbsDm-uX6dUGI" />
 
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 
